# dev-scaffolder

./: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: publish-to-pypi.yml
constants/backend/python/: base.py
developmentLogs/: ChoosingPythonInquirer.md
executors/: base.py
executors/backend/c/: minimal.py
executors/backend/cpp/: crow.py
executors/backend/csharp/: aspnet_core.py  ef_core.py
executors/backend/go/: echo.py  gin.py
executors/backend/java/: micronaut.py  quarkus.py  spring_boot.py
executors/backend/javascript/: express.py  fastify.py  nest.py
executors/backend/rust/: actix.py  rocket.py
executors/fullstack/: django_react.py  mern.py  nextjs.py
executors/ssr/: astro.py  nextjs.py  nuxtjs.py  remix.py  sveltekit.py
processors/: get_inquirer.py  handle_answers.py  load_questions.py
questions/: base.json
questions/backend/: base.json
questions/backend/c/: base.json  minimal.json
questions/backend/cpp/: base.json  crow.json
questions/backend/csharp/: aspnet_core.json  base.json  ef_core.json
questions/backend/go/: base.json  echo.json  gin.json
questions/backend/java/: base.json  micronaut.json  quarkus.json  spring_boot.json
questions/backend/javascript/: base.json  express.json  fastify.json  nest.json
questions/backend/python/: base.json
questions/backend/rust/: actix.json  base.json  rocket.json
questions/frontend/: base.json
questions/frontend/dart/: base.json  flutter.json
questions/frontend/javascript/: angular.json  base.json  react.json  svelte.json  (+1 more)
questions/fullstack/: base.json  django_react.json  mern.json  nextjs.json
questions/ssr/: astro.json  base.json  nextjs.json  nuxtjs.json  remix.json  sveltekit.json
scripts/scaffolder/: scaffolder.js  scaffolder.py
typings/: base.py  question.py
utils/: base.py  env.py
(+298 files in other folders)
